[metadata]
name = probed
version = file: VERSION
url = https://github.com/pyrustic/probed
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = Probed collections
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    library
    collections
    notification
    change-tracking
    dict
    set
    list
    containers
    probed-dict
    probed-set
    probed-list
    lightweight
    pyrustic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false

[options.entry_points]
console_scripts =
    probed = probed.__main__:main
